--- a/data/sentences/_athy.yml
+++ b/data/sentences/_athy.yml
@@ -1,9 +1,11 @@
 source: _athy.yml
-generator: ChatGPT
+generator: text-davinci-003
+prompt: 1
 --- |
-Please create a short sentence using all these words: antipathy, apathy, breathy
-Please create a short sentence using all these words: empathy, encephalopathy, homeopathy
-Please create a short sentence using all these words: hydropathy, naturopathy, neuropathy
-Please create a short sentence using all these words: osteopathy, sympathy, telepathy
---- |
-@@@
+She had an antipathy to apathy, but found herself breathy and unable to focus on how to make a difference in her own life.
+
+He had an uncanny ability to share in the pain of others, so much so that his empathies sometimes even extended to diseases like encephalopathy and homeopathy.
+
+With a strong opinion on allopathic medicine, he regularly practiced hydropathy, naturopathy, and neuropathy in order to keep the body and mind healthy and functioning in a human-directed way.
+
+His ability to feel the pain of others was so strong that it acted almost like a telepathy; he could sense their osteopathy and offer genuine sympathy in all its forms.
