--- a/data/sentences/_ba.yml
+++ b/data/sentences/_ba.yml
@@ -1,9 +1,11 @@
 source: _ba.yml
-generator: ChatGPT
+generator: text-davinci-003
+prompt: 3
 --- |
-Please create a short sentence using all these words: abba, amoeba, baba
-Please create a short sentence using all these words: indaba, jojoba, mamba
-Please create a short sentence using all these words: marimba, rumba, samba
-Please create a short sentence using all these words: scuba, Sheba, tuba
---- |
-@@@
+The wise Baba, who in his younger days had studied the complexities of an amoeba, often pondered the wonderful and intricate depths of the Abba.
+
+On the edge of the forest, the wise mamba would often tell stories to the small jojoba creatures that gathered around to listen. The tales recounted were ones of great indaba, weaving together tales of adventure, bravery and wisdom.
+
+The marimba player was renowned for his skillful interpretations of the samba and rumba rhythms, his performances creating a lively atmosphere that was sure to delight any audience.
+
+Deep in the depths of the sea, Queen Sheba and her people explored the ocean depths wearing scuba gear, all the while playing a soothing melody on their tubas.
