--- a/data/sentences/_bic.yml
+++ b/data/sentences/_bic.yml
@@ -1,9 +1,11 @@
 source: _bic.yml
-generator: ChatGPT
+generator: text-davinci-003
+prompt: 1
 --- |
-Please create a short sentence using all these words: acerbic, aerobic, anaerobic
-Please create a short sentence using all these words: claustrophobic, cubic, homophobic
-Please create a short sentence using all these words: hydrophobic, iambic, monosyllabic
-Please create a short sentence using all these words: pubic, syllabic, xenophobic
---- |
-@@@
+When engaging in an aerobic activity, our bodies produce energy through aerobic respiration and the result is a pleasant, acerbic feeling of invigoration; however, if the same activity is done without adequate oxygen, it is then referred to as anaerobic, which can result in fatigue.
+
+The claustrophobic feeling of being confined in a small, cubic space can be very overwhelming, so much so that it can cause a psychological reaction that is similar to the fear and hatred of homosexuals, otherwise known as homophobia.
+
+Hydrophobicity is a condition in which water is repelled from a surface, and can often be observed when comparing iambic verses to monosyllabic words, as the former tend to have greater syllable counts and are more difficult to pronounce.
+
+While pubic hair often serves a cosmetic purpose, it also serves an important linguistic one, as syllabic and xenophobic words, which are more difficult to pronounce, can often be made easier to enunciate by adding a few extra syllables.
