--- a/data/sentences/_bra.yml
+++ b/data/sentences/_bra.yml
@@ -1,9 +1,11 @@
 source: _bra.yml
-generator: ChatGPT
+generator: text-davinci-003
+prompt: 1
 --- |
-Please create a short sentence using all these words: abracadabra, algebra, Alhambra
-Please create a short sentence using all these words: bra, candelabra, cerebra
-Please create a short sentence using all these words: cobra, Libra, penumbra
-Please create a short sentence using all these words: umbra, vertebra, zebra
---- |
-@@@
+Abracadabra! said the math wizard as he waved his wand over the algebra equations scrawled on the walls of the old Alhambra Palace, magically transforming them into a perfect solution.
+
+As the light from the candelabra illuminated the room, the alchemist's eyes glowed with excitement as he placed a bra on the cerebra, believing that it would unlock the secret of eternal life.
+
+With a hiss, the cobra slithered out of its basket and began to slink around the scales of Libra, casting an eerie penumbra as it passed in the shadows of the night.
+
+As the moon began to traverse the sky, throwing a ghostly umbra across the plains, the herd of zebras meandered past the ancient vertebrae of long dead animals.
