--- a/data/sentences/_case.yml
+++ b/data/sentences/_case.yml
@@ -1,9 +1,11 @@
 source: _case.yml
-generator: ChatGPT
+generator: text-davinci-003
+prompt: 1
 --- |
-Please create a short sentence using all these words: bookcase, briefcase, crankcase
-Please create a short sentence using all these words: encase, headcase, lowercase
-Please create a short sentence using all these words: nutcase, pillowcase, showcase
-Please create a short sentence using all these words: slipcase, staircase, uppercase
---- |
-@@@
+The bookcase was filled with books, the briefcase was carefully tucked beneath it, and the crankcase was used to power a nearby machine that kept the room illuminated.
+
+She encased her head in a protective headcase and, against all odds, managed to find the lowercase letters tucked away in the corner of the room.
+
+The nutcase was madly pacing around the room, proclaiming his theories to anyone who would listen, while the pillowcase lay crumpled at his feet, and the showcase nearby seemed to contain a series of odd items that further supported his case.
+
+She carefully slid a thick book into the slipcase, silently ascending the staircase in search of the uppercase letters she had misplaced.
