--- a/data/sentences/_ddy.yml
+++ b/data/sentences/_ddy.yml
@@ -1,9 +1,11 @@
 source: _ddy.yml
-generator: ChatGPT
+generator: text-davinci-003
+prompt: 1
 --- |
-Please create a short sentence using all these words: biddy, buddy, cruddy
-Please create a short sentence using all these words: eddy, giddy, muddy
-Please create a short sentence using all these words: noddy, paddy, ruddy
-Please create a short sentence using all these words: shoddy, teddy, toddy
---- |
-@@@
+When Biddy and Buddy went for a walk in the woods, they were shocked to see how cruddy the terrain was - it looked like no one had been there for years!
+
+Eddy and Giddy were so excited to play outside on the muddy day - they splashed in every puddle and laughed until sunset.
+
+Noddy and Paddy were stunned to see how ruddy the sky had become - they'd never seen such a beautiful sunset before!
+
+After buying a shoddy teddy bear at the market, Toddy was hugely surprised when it suddenly sprouted arms and legs - it seemed almost alive!
