--- a/data/sentences/_eak.yml
+++ b/data/sentences/_eak.yml
@@ -1,9 +1,11 @@
 source: _eak.yml
-generator: ChatGPT
+generator: text-davinci-003
+prompt: 1
 --- |
-Please create a short sentence using all these words: beak, bleak, creak
-Please create a short sentence using all these words: daybreak, freak, outbreak
-Please create a short sentence using all these words: sneak, squeak, streak
-Please create a short sentence using all these words: teak, tweak, wreak
---- |
-@@@
+The beak of the raven cawed loudly against the bleak and foreboding sky, its loud creak reverberating across the landscape.
+
+At daybreak, the villagers were shocked to see a freak outbreak of an unfamiliar species that had never been seen before.
+
+He tried to sneak past undetected, the sound of his shoes squeaking against the polished floor and his white shirt leaving a distinct streak marking his path.
+
+The carpenter carefully sanded the teak wood, making sure to tweak each piece until it was flawless, knowing his work would inevitably wreak havoc on the budget.
