--- a/data/sentences/_eek.yml
+++ b/data/sentences/_eek.yml
@@ -1,9 +1,11 @@
 source: _eek.yml
-generator: ChatGPT
+generator: text-davinci-003
+prompt: 1
 --- |
-Please create a short sentence using all these words: cheek, creek, eek
-Please create a short sentence using all these words: fenugreek, geek, leek
-Please create a short sentence using all these words: meek, peek, reek
-Please create a short sentence using all these words: seek, sleek, workweek
---- |
-@@@
+The young girl's flushed cheeks were so small that a tiny creek of sweat ran down her eek-inducing fear.
+
+While the fashionably geeky girl was perusing the local farmers' market she couldn't help but stop to smell the fenugreek, leek and other delicious herbs, dreaming of cooking a tasty meal.
+
+As he cautiously peeked around the corner, a pungent reek of cigarette smoke filled the air and he could not help but meekly step back.
+
+She used her workweek to seek solace and the sleek silhouette of a relaxing holiday horizon in the distant.
