--- a/data/sentences/_eft.yml
+++ b/data/sentences/_eft.yml
@@ -1,9 +1,11 @@
 source: _eft.yml
-generator: ChatGPT
+generator: text-davinci-003
+prompt: 1
 --- |
-Please create a short sentence using all these words: bereft, cleft
-Please create a short sentence using all these words: deft, eft
-Please create a short sentence using all these words: heft, reft
-Please create a short sentence using all these words: theft, weft
---- |
-@@@
+Bewildered and bereft by the deep cleft in his heart, he could not find solace in anything, for all that he had ever known was now being slowly cleft away from him.
+
+With a deft touch, the eft scuttled away from the buoyant river and into the welcoming shallows of the riverbank, where it felt safe and free from the turmoil of the watery depths.
+
+Lifting the heavy heft of the rock as if it were nothing, he smiled in satisfaction knowing that his efforts had refilled the empty cavity carved into the hillside with a new and sturdy reft.
+
+Although dubious of his goal, he decided to go ahead with his plan, weaving and winding like a thief in the night as he stole away with the vibrant weft of fabric from the loom.
