--- a/data/sentences/_elt.yml
+++ b/data/sentences/_elt.yml
@@ -1,9 +1,11 @@
 source: _elt.yml
-generator: ChatGPT
+generator: text-davinci-003
+prompt: 1
 --- |
-Please create a short sentence using all these words: belt, celt, dwelt
-Please create a short sentence using all these words: felt, heartfelt, kelt
-Please create a short sentence using all these words: knelt, melt, pelt
-Please create a short sentence using all these words: smelt, sunbelt, welt
---- |
-@@@
+The celt dwelt on his belt, keeping it firmly fastened around his waist for the long journey ahead.
+
+His heartfelt sentiment for his beloved kelt was strongly felt, yet the bond between them remained inextricably strong.
+
+Kneeling in reverence, he felt the cold wind pelt against his face as his icy tears melted into the ground.
+
+As he stepped into the sunbelt, his senses were overwhelmed by the sweet smell of smelt in the air, and a small welt rose on his arm from the heat.
