--- a/data/sentences/_eric.yml
+++ b/data/sentences/_eric.yml
@@ -1,9 +1,11 @@
 source: _eric.yml
-generator: ChatGPT
+generator: text-davinci-003
+prompt: 1
 --- |
-Please create a short sentence using all these words: atmospheric, cleric, enteric
-Please create a short sentence using all these words: esoteric, exoteric, generic
-Please create a short sentence using all these words: hemispheric, mesmeric, numeric
-Please create a short sentence using all these words: polymeric, stratospheric, turmeric
---- |
-@@@
+The cleric entered the atmospheric chamber, intent on discovering the secrets of the enteric realm.
+
+The esoteric and exoteric knowledge blended together to create a generic understanding of the world around us.
+
+Mesmerized by the numeric possibilities of the hemispheric realm, the scientist continued their exploration of the unknown.
+
+To explore the mysteries of the stratospheric plane, the intrepid explorer armed themselves with a combination of polymeric and turmeric compounds.
