--- a/data/sentences/_ete.yml
+++ b/data/sentences/_ete.yml
@@ -1,9 +1,11 @@
 source: _ete.yml
-generator: ChatGPT
+generator: text-davinci-003
+prompt: 1
 --- |
-Please create a short sentence using all these words: athlete, compete, concrete, deplete
-Please create a short sentence using all these words: discrete, effete, excrete, fete
-Please create a short sentence using all these words: gamete, machete, mete, naivete
-Please create a short sentence using all these words: obsolete, replete, secrete, triathlete
---- |
-@@@
+An athlete needs to use his own determination and dedication to compete on the concrete floor, but he must never deplete his energy or motivation in order to succeed.
+
+A discrete person should never be effete in their actions, otherwise they risk having to excrete any hard work they put in to celebrate a fete.
+
+The naivete of a gamete that carries only half the genetic material is no match for the machete wielded by fate, which will mete out its predetermined destiny.
+
+A triathlete's success lies in their ability to replete their physical and mental stamina whilst still remaining focused and not allowing their training to become obsolete; all the hard work and dedication then eventually secrete into a rewarding outcome.
