--- a/data/sentences/_illa.yml
+++ b/data/sentences/_illa.yml
@@ -1,9 +1,11 @@
 source: _illa.yml
-generator: ChatGPT
+generator: text-davinci-003
+prompt: 1
 --- |
-Please create a short sentence using all these words: chinchilla, flotilla, gorilla
-Please create a short sentence using all these words: guerilla, mantilla, maxilla
-Please create a short sentence using all these words: quesadilla, sarsaparilla, scintilla
-Please create a short sentence using all these words: tortilla, vanilla, villa
---- |
-@@@
+On a bright and sunny morning, a flotilla of chinchillas and one giant gorilla descended upon a lake to take a refreshing dip in the cool water.
+
+The guerilla proudly sported a mantilla around his head while he opened his maxilla to show off his gleaming white teeth.
+
+While indulging in a delicious quesadilla, the group of friends shared a bottle of sarsaparilla and reminisced about the good times they had shared, each moment captured like a scintilla of joy.
+
+The rich aroma of vanilla wafted through the ornate halls of the grand villa as a delectable feast of tortilla chips and salsa was served in the majestic dining room.
