--- a/data/sentences/_ind.yml
+++ b/data/sentences/_ind.yml
@@ -1,9 +1,11 @@
 source: _ind.yml
-generator: ChatGPT
+generator: text-davinci-003
+prompt: 1
 --- |
-Please create a short sentence using all these words: behind, bind, colorblind, downwind, grind
-Please create a short sentence using all these words: headwind, hind, humankind, mankind, mastermind
-Please create a short sentence using all these words: purblind, rescind, rind, tamarind, unbind
-Please create a short sentence using all these words: unkind, unwind, upwind, whirlwind, woodwind
---- |
-@@@
+He was so colorblind that he didn't realize he was heading downwind and ended up being completely taken aback when he stumbled upon a mill grinding wheat just a few meters behind him.
+
+The mastermind behind the success of humankind and mankind had the foresight to anticipate the potential with headwinds, and it was hind to his greatness that propelled them into the future.
+
+Although he was purblind and initially thought to rescind the contract, it wasn't until he tasted the sweet tamarind that he unbound himself from the previous decision and decided to keep it.
+
+The whirlwind of unkind emotions surged upwind when the woodwind instrument started to play and his heart began to unwind as the melody moved through him.
