--- a/data/sentences/_ino.yml
+++ b/data/sentences/_ino.yml
@@ -1,9 +1,11 @@
 source: _ino.yml
-generator: ChatGPT
+generator: text-davinci-003
+prompt: 1
 --- |
-Please create a short sentence using all these words: albino, bambino, cappuccino
-Please create a short sentence using all these words: chino, latino, lino
-Please create a short sentence using all these words: merino, neutrino, palomino
-Please create a short sentence using all these words: rhino, vino, wino
---- |
-@@@
+On a sunny summer morning, a mischievous bambino wearing all white clothes marched through the park sipping on a freshly-brewed cappuccino as if he were an albino peacock showing off its feathers.
+
+Leaning against a wall was a Latino with a chino hat and a lino shirt, looking like a perfectly tailored mannequin in the middle of the bustling street.
+
+As the sun began to set, a majestic palomino galloped through an open meadow, sending an abundance of merino sheep and neutrinos scattering amidst the clouds.
+
+As the night grew darker, a curious wino stumbled upon a rhino in the city center, who graciously offered the man a glass of vino as a thank you for not disturbing his slumber.
