--- a/data/sentences/_ipe.yml
+++ b/data/sentences/_ipe.yml
@@ -1,9 +1,11 @@
 source: _ipe.yml
-generator: ChatGPT
+generator: text-davinci-003
+prompt: 1
 --- |
-Please create a short sentence using all these words: bagpipe, gripe, hornpipe
-Please create a short sentence using all these words: pinstripe, ripe, snipe
-Please create a short sentence using all these words: stripe, swipe, tailpipe
-Please create a short sentence using all these words: tripe, unripe, windpipe
---- |
-@@@
+A bagpipe and a hornpipe created an incessant cacophony that caused people to gripe about the noise late into the night.
+
+A snipe flew boldly across the sky, its pinstriped wings glistening in the sunlight, and it dive-bombed some ripe fruit hanging from a nearby tree.
+
+The stripe-painted car raced down the road, its tailpipe emitting a roiling black smoke that billowed out after each daring swipe of the gear shift.
+
+After gorging on greasy tripe, the careless eater soon found themselves feeling queasy and short of breath, as an unripe piece of fruit clogged their windpipe.
