--- a/data/sentences/_ipt.yml
+++ b/data/sentences/_ipt.yml
@@ -1,9 +1,11 @@
 source: _ipt.yml
-generator: ChatGPT
+generator: text-davinci-003
+prompt: 1
 --- |
-Please create a short sentence using all these words: conscript, manuscript, nondescript
-Please create a short sentence using all these words: postscript, prescript, receipt
-Please create a short sentence using all these words: script, subscript, superscript
-Please create a short sentence using all these words: transcript, typescript, whipt
---- |
-@@@
+A nondescript conscript was painstakingly transcribing words from a manuscript, unable to find any sort of recognition in the dull and repetitive task.
+
+The postscript on the prescript was very clear, instructing the recipient to keep the receipt as proof of purchase, but little did they know it held so much more value than just a financial transaction.
+
+As the script writer carefully inscribed their words in subscript and superscript, they hoped that their efforts would capture the attention and imagination of their audience.
+
+The whipt crack of the teacher's ruler reverberated in the classroom as each student feverishly worked to transcribe their words onto a typescript which would then be used as a transcript of their knowledge.
