--- a/data/sentences/_irt.yml
+++ b/data/sentences/_irt.yml
@@ -1,9 +1,11 @@
 source: _irt.yml
-generator: ChatGPT
+generator: text-davinci-003
+prompt: 1
 --- |
-Please create a short sentence using all these words: dirt, flirt
-Please create a short sentence using all these words: girt, nightshirt
-Please create a short sentence using all these words: outskirt, quirt
-Please create a short sentence using all these words: squirt, sweatshirt
---- |
-@@@
+She was so smitten with him that she couldn't help but flirt and giggle, her cheeks blushing like dirt in the sun.
+
+As the moon shone brightly, she slipped into her comfortable nightshirt and girt, ready for a peaceful night’s sleep.
+
+She galloped to the outskirts of town, daringly flicking her quirt as she departed to a place of unknown adventure.
+
+Taking a deep breath, he bravely jumped into the pool and let out a loud squirt, his sweatshirt getting soaked in the process.
