--- a/data/sentences/_ital.yml
+++ b/data/sentences/_ital.yml
@@ -1,9 +1,11 @@
 source: _ital.yml
-generator: ChatGPT
+generator: text-davinci-003
+prompt: 1
 --- |
-Please create a short sentence using all these words: capital, coital, congenital
-Please create a short sentence using all these words: extramarital, genital, marital
-Please create a short sentence using all these words: orbital, premarital, recital
-Please create a short sentence using all these words: requital, urogenital, vital
---- |
-@@@
+We are born with a congenital capital that is essential to our coital success, as it serves as the foundation for much of our social and economic interactions.
+
+Extramarital affairs are often condemned as immoral and deceptive, yet the human sex drive is a powerful force that can sometimes be difficult to control, leading some people to engage in intimate genital relations outside of their marital commitment.
+
+Though premarital relations are often frowned upon by society, many choose to pursue them as a means of exploring their passions before an orbital recital of vows and commitments.
+
+The vital urogenital organs of the body are essential for survival, and as such, proper requital for their continued maintenance and care is a must in order to ensure their long-term efficacy and functioning.
