--- a/data/sentences/_itch.yml
+++ b/data/sentences/_itch.yml
@@ -1,9 +1,11 @@
 source: _itch.yml
-generator: ChatGPT
+generator: text-davinci-003
+prompt: 1
 --- |
-Please create a short sentence using all these words: ditch, eldritch, fitch
-Please create a short sentence using all these words: glitch, hitch, itch
-Please create a short sentence using all these words: pitch, snitch, stitch
-Please create a short sentence using all these words: titch, twitch, witch
---- |
-@@@
+A curious eldritch creature lurked in the ditch, eagerly searching for the perfect fitch of fur to fashion a new hat.
+
+As Sally walked down the street, her foot caught on a mysterious glitch in the sidewalk and she stumbled, barely managing to catch herself on a hitch protruding from a nearby wall, as an itchy sensation ran up her arm.
+
+The little baseball pitcher hurled the ball with expert precision, making a perfect pitch that caused the batter to swing and miss, and the catcher rewarded him with a congratulatory snitch and stitch of the gloves.
+
+As the witch cackled manically in the moonlight, a tiny titch of fear twitched throughout her proceedings as if she felt an unseen presence watching her every twitch.
