--- a/data/sentences/_kly.yml
+++ b/data/sentences/_kly.yml
@@ -1,9 +1,11 @@
 source: _kly.yml
-generator: ChatGPT
+generator: text-davinci-003
+prompt: 1
 --- |
-Please create a short sentence using all these words: biweekly, blankly, bleakly
-Please create a short sentence using all these words: briskly, frankly, meekly
-Please create a short sentence using all these words: prickly, sickly, starkly
-Please create a short sentence using all these words: thickly, weakly, wrinkly
---- |
-@@@
+She stared blankly out of the window, her thoughts bleakly reflecting the biweekly routine of her life.
+
+Frankly speaking, she walked briskly and meekly down the street, uncertain of where her journey would take her.
+
+The starkly bright sun revealed a landscape of prickly cacti and sickly yellow grass, creating an unforgiving atmosphere.
+
+She had aged quickly, her skin becoming wrinkly and weakly covered in a layer of thickly applied makeup.
