--- a/data/sentences/_lage.yml
+++ b/data/sentences/_lage.yml
@@ -1,9 +1,11 @@
 source: _lage.yml
-generator: ChatGPT
+generator: text-davinci-003
+prompt: 1
 --- |
-Please create a short sentence using all these words: assemblage, camouflage, cartilage
-Please create a short sentence using all these words: collage, fuselage, haulage
-Please create a short sentence using all these words: pillage, silage, spillage
-Please create a short sentence using all these words: spoilage, tillage, tutelage
---- |
-@@@
+The assemblage of animals in the forest was no match for the artful camouflage of the green-colored cartilage that blended seamlessly into the surrounding foliage.
+
+The handmade collage of vintage images was placed carefully on the fuselage of the airplane, with secure haulage ensuring that it made it safely to its destination.
+
+The pillage of the village was so great that even the silage stored in barns was not spared, with great spillage staining the ground when the vandals overturned the containers.
+
+The children's learning was nurtured through expert tutelage, even as their families worked the land for tillage and harvested the soil before spoilage could set in.
